external-crates/move/crates/move-compiler/tests/development/enums/matching/multi_or.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/multi_or.move:3:17
  │
3 │     public enum ABC<T> has drop {
  │                 ^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

